--- a/charts/opentelemetry-collector/examples/deployment-only/rendered/serviceaccount.yaml
+++ b/charts/opentelemetry-collector/examples/deployment-only/rendered/serviceaccount.yaml
@@ -4,7 +4,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: example-opentelemetry-collector
-  namespace: default
+  namespace: opentelemetry
   labels:
     helm.sh/chart: opentelemetry-collector-0.69.2
     app.kubernetes.io/name: opentelemetry-collector
