--- a/charts/opentelemetry-collector/values.yaml
+++ b/charts/opentelemetry-collector/values.yaml
@@ -86,6 +86,12 @@ configMap:
 # For example, {{ REDACTED_EMAIL }} becomes {{` {{ REDACTED_EMAIL }} `}}.
 config:
   exporters:
+    prometheus:
+      endpoint: ${env:MY_POD_IP}:8889        
+      send_timestamps: true
+      metric_expiration: 180m
+      resource_to_telemetry_conversion:
+      enabled: true
     debug: {}
   extensions:
     # The health_check extension is mandatory for this chart.
@@ -112,14 +118,14 @@ config:
           endpoint: ${env:MY_POD_IP}:4317
         http:
           endpoint: ${env:MY_POD_IP}:4318
-    prometheus:
-      config:
-        scrape_configs:
-          - job_name: opentelemetry-collector
-            scrape_interval: 10s
-            static_configs:
-              - targets:
-                  - ${env:MY_POD_IP}:8888
+    # prometheus:
+    #   config:
+    #     scrape_configs:
+    #       - job_name: opentelemetry-collector
+    #         scrape_interval: 10s
+    #         static_configs:
+    #           - targets:
+    #               - ${env:MY_POD_IP}:8888
     zipkin:
       endpoint: ${env:MY_POD_IP}:9411
   service:
@@ -141,12 +147,13 @@ config:
       metrics:
         exporters:
           - debug
+          - prometheus
         processors:
           - memory_limiter
           - batch
         receivers:
           - otlp
-          - prometheus
+          # - prometheus
       traces:
         exporters:
           - debug
