--- a/charts/opentelemetry-collector/values.yaml
+++ b/charts/opentelemetry-collector/values.yaml
@@ -86,8 +86,8 @@ configMap:
 # For example, {{ REDACTED_EMAIL }} becomes {{` {{ REDACTED_EMAIL }} `}}.
 config:
   exporters:
-    # prometheus:
-    #   endpoint: ${env:MY_POD_IP}:8889  
+    prometheus:
+      endpoint: ${env:MY_POD_IP}:8889  
     file:
       path: /data/metrics.json  
     debug: {}
@@ -116,14 +116,14 @@ config:
           endpoint: ${env:MY_POD_IP}:4317
         http:
           endpoint: ${env:MY_POD_IP}:4318
-    prometheus:
-      config:
-        scrape_configs:
-          - job_name: opentelemetry-collector
-            scrape_interval: 10s
-            static_configs:
-              - targets:
-                  - ${env:MY_POD_IP}:8888
+    # prometheus:
+    #   config:
+    #     scrape_configs:
+    #       - job_name: opentelemetry-collector
+    #         scrape_interval: 10s
+    #         static_configs:
+    #           - targets:
+    #               - ${env:MY_POD_IP}:8888
     zipkin:
       endpoint: ${env:MY_POD_IP}:9411
   service:
@@ -146,13 +146,13 @@ config:
         exporters:
           - debug
           - file
-          # - prometheus
+          - prometheus
         processors:
           - memory_limiter
           - batch
         receivers:
           - otlp
-          - prometheus
+          # - prometheus
       traces:
         exporters:
           - debug
@@ -282,9 +282,15 @@ ports:
   metrics:
     # The metrics port is disabled by default. However you need to enable the port
     # in order to use the ServiceMonitor (serviceMonitor.enabled) or PodMonitor (podMonitor.enabled).
-    enabled: false
+    enabled: true
     containerPort: 8888
     servicePort: 8888
+    protocol: TCP
+  promexp:
+    enabled: true
+    containerPort: 8889
+    servicePort: 8889
+    hostPort: 8889
     protocol: TCP
 
 # Resource limits & requests. Update according to your own use case as these values might be too low for a typical deployment.
@@ -469,7 +475,7 @@ podMonitor:
 serviceMonitor:
   # The service monitor by default scrapes the metrics port.
   # The metrics port needs to be enabled as well.
-  enabled: false
+  enabled: true
   metricsEndpoints:
     - port: metrics
       # interval: 15s
