--- a/charts/opentelemetry-collector/values.yaml
+++ b/charts/opentelemetry-collector/values.yaml
@@ -282,7 +282,7 @@ ports:
   metrics:
     # The metrics port is disabled by default. However you need to enable the port
     # in order to use the ServiceMonitor (serviceMonitor.enabled) or PodMonitor (podMonitor.enabled).
-    enabled: true
+    enabled: false
     containerPort: 8888
     servicePort: 8888
     protocol: TCP
@@ -475,7 +475,7 @@ podMonitor:
 serviceMonitor:
   # The service monitor by default scrapes the metrics port.
   # The metrics port needs to be enabled as well.
-  enabled: true
+  enabled: false
   metricsEndpoints:
     - port: metrics
       # interval: 15s
