--- a/charts/opentelemetry-collector/values.yaml
+++ b/charts/opentelemetry-collector/values.yaml
@@ -86,8 +86,8 @@ configMap:
 # For example, {{ REDACTED_EMAIL }} becomes {{` {{ REDACTED_EMAIL }} `}}.
 config:
   exporters:
-    # prometheus:
-    #   endpoint: ${env:MY_POD_IP}:8889  
+    prometheus:
+      endpoint: ${env:MY_POD_IP}:8889  
     file:
       path: /data/metrics.json  
     debug: {}
@@ -146,7 +146,7 @@ config:
         exporters:
           - debug
           - file
-          # - prometheus
+          - prometheus
         processors:
           - memory_limiter
           - batch
@@ -286,12 +286,12 @@ ports:
     containerPort: 8888
     servicePort: 8888
     protocol: TCP
-  # promexp:
-  #   enabled: true
-  #   containerPort: 8889
-  #   servicePort: 8889
-  #   hostPort: 8889
-  #   protocol: TCP
+  prometheus:
+    enabled: true
+    containerPort: 8889
+    servicePort: 8889
+    hostPort: 8889
+    protocol: TCP
 
 # Resource limits & requests. Update according to your own use case as these values might be too low for a typical deployment.
 resources: {}
